editted pom for compat